[gd_scene load_steps=8 format=3 uid="uid://cva8rn5debf6s"]

[ext_resource type="Script" uid="uid://47nbbqg3rse0" path="res://scripts/bomb.gd" id="1_ji05a"]
[ext_resource type="Texture2D" uid="uid://d0ihtkatn5fn" path="res://assets/sgq_dungeons/pickup_items_animated.png" id="2_ntj2s"]
[ext_resource type="AudioStream" uid="uid://dfrauf0jmr1dn" path="res://assets/custom/bomb_place.wav" id="3_5qxgf"]
[ext_resource type="AudioStream" uid="uid://bhwgckpu5v7cl" path="res://assets/custom/bomb_fuse.wav" id="4_ybdcl"]
[ext_resource type="AudioStream" uid="uid://bg1rgndbkxxw1" path="res://assets/custom/bomb_explode.wav" id="5_ybdcl"]

[sub_resource type="Gradient" id="Gradient_ji05a"]
offsets = PackedFloat32Array(0, 0.03333336, 0.06666666, 0.100000024, 0.13333333, 0.16666669, 0.19999999, 0.23333335, 0.26666665, 0.3, 0.3333333, 0.36666667, 0.39999998, 0.43333334, 0.46666664, 0.5, 0.5333333, 0.56666666, 0.6, 0.6333333, 0.6666666, 0.7, 0.73333335, 0.76666665, 0.8, 0.8333333, 0.8666667, 0.9, 0.93333334, 0.96666664, 1)
colors = PackedColorArray(1, 0, 0, 1, 1, 0.03333336, 0.03333336, 1, 1, 0.06666666, 0.06666666, 1, 1, 0.100000024, 0.100000024, 1, 1, 0.13333333, 0.13333333, 1, 1, 0.16666669, 0.16666669, 1, 1, 0.19999999, 0.19999999, 1, 1, 0.23333335, 0.23333335, 1, 1, 0.26666665, 0.26666665, 1, 1, 0.3, 0.3, 1, 1, 0.3333333, 0.3333333, 1, 1, 0.36666667, 0.36666667, 1, 1, 0.39999998, 0.39999998, 1, 1, 0.43333334, 0.43333334, 1, 1, 0.46666664, 0.46666664, 1, 1, 0.5, 0.5, 1, 1, 0.53333336, 0.53333336, 1, 1, 0.5666667, 0.5666667, 1, 1, 0.6, 0.6, 1, 1, 0.6333333, 0.6333333, 1, 1, 0.6666666, 0.6666666, 1, 1, 0.6999999, 0.6999999, 1, 1, 0.7333333, 0.7333333, 1, 1, 0.76666665, 0.76666665, 1, 1, 0.79999995, 0.79999995, 1, 1, 0.8333333, 0.8333333, 1, 1, 0.8666666, 0.8666666, 1, 1, 0.9, 0.9, 1, 1, 0.93333334, 0.93333334, 1, 1, 0.9666667, 0.9666667, 1, 1, 1, 1, 1)
metadata/_snap_enabled = true
metadata/_snap_count = 30

[sub_resource type="CircleShape2D" id="CircleShape2D_ji05a"]
radius = 60.0

[node name="Bomb" type="Area2D"]
monitoring = false
script = ExtResource("1_ji05a")
time_until_explode = 2.25
timer_gradient = SubResource("Gradient_ji05a")

[node name="Shape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ji05a")

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = ExtResource("2_ntj2s")
hframes = 4
vframes = 8
frame = 12

[node name="ExplosionTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="BombPlaceSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_5qxgf")
autoplay = true

[node name="BombFuseSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ybdcl")
autoplay = true

[node name="BombExplodeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ybdcl")

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="ExplosionTimer" to="." method="_on_explosion_timer_timeout"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
